<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buyon_bg_primary">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_horizontal_padding"
        android:paddingTop="@dimen/spacing_l"
        android:paddingEnd="@dimen/screen_horizontal_padding"
        android:paddingBottom="@dimen/spacing_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Buyon.Label"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_products"
            android:textAppearance="@style/TextAppearance.Buyon.Headline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_search"
            style="@style/Widget.Buyon.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_l"
            android:hint="@string/search_hint"
            app:boxCornerRadiusBottomEnd="@dimen/radius_pill"
            app:boxCornerRadiusBottomStart="@dimen/radius_pill"
            app:boxCornerRadiusTopEnd="@dimen/radius_pill"
            app:boxCornerRadiusTopStart="@dimen/radius_pill"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/buyon_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/buyon_text_primary" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Categories label -->
    <TextView
        android:id="@+id/label_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/trending_search"
        android:textAppearance="@style/TextAppearance.Buyon.Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="@dimen/content_horizontal_padding"
        android:paddingEnd="@dimen/content_horizontal_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_categories"
        tools:listitem="@layout/item_category" />

    <TextView
        android:id="@+id/label_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_horizontal_padding"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/trending_products"
        android:textAppearance="@style/TextAppearance.Buyon.SectionHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_categories" />

    <ProgressBar
        android:id="@+id/progress_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_results" />

    <LinearLayout
        android:id="@+id/empty_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xxxl"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_results">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_empty_title"
            android:textAppearance="@style/TextAppearance.Buyon.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:gravity="center"
            android:text="@string/search_empty_subtitle"
            android:textAppearance="@style/TextAppearance.Buyon.BodySecondary" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_s"
        android:clipToPadding="false"
        android:paddingStart="@dimen/content_horizontal_padding"
        android:paddingEnd="@dimen/content_horizontal_padding"
        android:paddingBottom="@dimen/spacing_l"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_results"
        tools:listitem="@layout/item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>
